--- a/version-gcc-4.9.4
+++ b/version-gcc-4.9.4
@@ -16,3 +16,7 @@ URI_NCURSES=$MIRROR/gnu/ncurses/ncurses-5.9.tar.gz
 URI_GDB=$MIRROR/gnu/gdb/gdb-7.10.1.tar.xz
 URI_BASH=$MIRROR/gnu/bash/bash-4.3.30.tar.gz
 URI_MAKE=$MIRROR/gnu/make/make-4.2.1.tar.gz
+URI_UUID=https://nchc.dl.sourceforge.net/project/libuuid/libuuid-1.0.3.tar.gz
+GIT_ZLIB=https://github.com/madler/zlib.git@1.2.12
+GIT_UUID=https://github.com/sean-/ossp-uuid.git@master
+GIT_MTD_UTILS=git://git.infradead.org/mtd-utils.git@v2.1.5
